--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -51,7 +51,15 @@
 	</div>
 	<div class="userfield">
 		user<br>
-		<%= @userName %>
+		<%= @userName %><br>
+		<% if @showheart %>
+			is al favoriet
+		<% else %>
+			<%= link_to 'favoriet maken', {:controller => "favorites", :action => "create"}, :method => "post" %><br>
+			
+		<% end %><br>
+		<%= current_user.id %> en <%= @article.id %>
 	</div>
+	
 </div>
 </div>
