Adds Favorite (create from articles)
This commit adds working favorites buttons to articles. Users can now
favorite posts they like.

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -51,8 +51,15 @@
 	</div>
 	<div class="userfield">
 		user<br>
-		<%= @userName %><br>
+		<%= @userName %><br>		
+	</div>
+	<div class="favorite-container">
 		
+		<% if @showheart %>
+			<div class='unfavoritebutton' id='<%= @article.id %>'></div>
+		<% else %>
+			<div class='favoritebutton' id='<%= @article.id %>'></div>
+		<% end %>
 	</div>
 	
 </div>
