Adds testfunctions favorites
A favorites experiment has been launched. this commit includes new
routes and minor changes to the destroy functions in the favorites
controller class

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -57,7 +57,7 @@
 		
 		<% if @showheart %>
 			<div class='unfavoritebutton' id='<%= @article.id %>'></div>
-		<% else %>
+		<% elsif user_signed_in? %>
 			<div class='favoritebutton' id='<%= @article.id %>'></div>
 		<% end %>
 	</div>
