Fixing the  pictureuploeder
Pixure uploader is completed

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -16,7 +16,7 @@
   <%= f.password_field :password_confirmation %></div>
 
   <div><%= f.label :picture %><br />
-  <%= f.file_field :picture %></div>
+  <%= f.file_field :picture, :autofocus => true %></div>
 
   <div><%= f.submit "Sign up" %></div>
 <% end %>
