--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -7,7 +7,7 @@
   <%= f.text_field :name, :autofocus => true %></div>
 
   <div><%= f.label :email %><br />
-  <%= f.email_field :email, :autofocus => true %></div>
+  <%= f.email_field :email %></div>
 
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
     <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
@@ -22,8 +22,8 @@
   <div><%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
   <%= f.password_field :current_password %></div>
 
-  <div><%= f.label :picture %><br />
-  <%= f.text_field :picture, :autofocus => true %></div>
+  <div><%= f.label :avatar %><br />
+  <%= f.text_field :avatar %></div>
 
   <div><%= f.submit "Update" %></div>
 <% end %>
