Fix comments for !user_logged_in? and destroy
Added an if-statement in the deletebutton to check if user is signed in.
and added the first destroy scripts to make sure favorites and comments
are removed for the article that might get removed along the way. this
to ensure users are not confronted with unexisting pages and the server
doesn't  crash along this way.

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -69,10 +69,10 @@
 
 		<%= review.content %><br/><br/>
 		<%= review.user.name + " || " + time_ago_in_words(review.created_at)%> ago ||
-		<% if review.user_id == current_user.id %>
-		<%= link_to 'Verwijderen', article_review_path(review.article, review), 
-				 		:confirm => "Weet u zeker dat u deze comment wil verwijderen?",
-				 			:method => :delete  %>
+		<% if user_signed_in? && review.user_id == current_user.id %>
+				<%= link_to 'Verwijderen', article_review_path(review.article, review), 
+						 		:confirm => "Weet u zeker dat u deze comment wil verwijderen?",
+						 			:method => :delete  %>
 		<% else %>
 		
 		<% end %> 
