--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -23,7 +23,7 @@
   <%= f.password_field :current_password %></div>
 
   <div><%= f.label :avatar %><br />
-  <%= f.text_field :avatar %></div>
+  <%= f.file_field :avatar %></div>
 
   <div><%= f.submit "Update" %></div>
 <% end %>
