--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -22,7 +22,7 @@
 
 	<header>
 			<!--LOGIN ====================================-->
-			<div style="display:none;">
+			<div>
 				<%= link_to 'Edit', edit_article_path(@article) %> | 
 				<%= link_to 'Back', articles_path %> | <%= button_to 'Verwijderen', @article, method: :delete, data: { confirm: 'Are you sure?' } %>
 
@@ -71,7 +71,7 @@
 		<hr><b><%= review.title %></b><br/><br/>
 
 		<%= review.content %><br/><br/>
-		<img src="<%= review.user.avatar_url(:microthumb) %>"
+		<img src="<%= review.user.avatar_url(:microthumb) %>" />
 		<%= review.user.name + " || " + time_ago_in_words(review.created_at)%> ago ||
 		<% if user_signed_in? && review.user_id == current_user.id %>
 				<%= link_to 'Verwijderen', article_review_path(review.article, review), 
